# NeToChi

./: .gitignore  README.md  TODO.txt  environment.yml  pyproject.toml  requirements.txt  run_experiments.py
docs/: QAP_Mapping_Mathematics.md  SBM_MCMC_Guide.md  Semester_Project__Small_World_Network_Mapping.pdf:Zone.Identifier  TODO.txt  greedy_mapper_algorithm.md  joint_hardware_inference.md
legacy/: replot.py  test_plotting.py
netochi/: run_experiments.py
netochi/definitions/: __init__.py  constants.py  exceptions.py  freezable.py  generics.py  icontract.py
netochi/input_generator/: erdos_renyi.py  erdos_renyi_factory.py  factories.py  interfaces.py  mosaic_hardware_config.py  mosaic_network_factory.py  swta_factory.py  utils.py  wta_factory.py  wta_generator.py
netochi/mapping/: __init__.py  cluster_init_mapper_adapter_fix_hw.py  cluster_init_mapper_adapter_infer_hw.py  constants.py  exceptions.py  greedy_mapper.py  hSBC_parameter_inference.py  hSBM_parameter_inference_explanation.md  hardware_config.py  hybrid_mapper.py  ilp_mapper.py  interfaces.py  joint_inference_mapper.py  likelihood_state.py  mcmc_mapper.py  qap_mapper.py  qap_mapper_legacy.py  random_mapper.py  sa_ihw_config.py  sa_ihw_mapper.py  simulated_annealing_mapper.py  simulated_annealing_mapper_cluster_init.py  simulated_annealing_state_mutation_utils.py
netochi/network_generator/: factories.py  random_generator.py  swta_generator.py
netochi/objectives/: __init__.py  constants.py  exceptions.py  hardware_cost.py  implementations  inconsistency.py  interfaces  interfaces.py  log_likelihood.py  obj_clustering.py  obj_hardware_size.py  obj_inconsistency.py  obj_inconsistency_relative.py  obj_log_likelihood.py  obj_unused_connections.py  obj_valid_edges.py  utils.py
netochi/pipeline/: __init__.py  archiver.py  config.py  (+13 more)
tests/: experiment_inference_custom_networks.py  test_flat_rebuild_cluster_adapter.py  test_hierarchical_community_detection.py  test_hierarchy_into_adj_list.py  test_padding_hw_cluster_adapter.py  test_random_generator_slice.py  test_section5_model.py  test_validate_mappers.py  test_validate_mappers_general.py  test_visualizations.py  utils_graph_generation.py  utils_mapping_output_validation.py  validate_mapping.py
(+92 files in other folders)
