[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netochi"
version = "0.1.0"
authors = [
  { name="Laurenz", email="laurenz@example.com" },
]
description = "Neuromorphic To Chip: Stochastic Block Model Mapping Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "networkx",
    "pydantic",
    # Note: graph-tool is a dependency but often requires manual installation
]

[project.urls]
"Homepage" = "https://github.com/username/netochi"
"Bug Tracker" = "https://github.com/username/netochi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["netochi*"]
